Bug 296439 - Send "paused" state when we're not composing.
Summary: Send "paused" state when we're not composing.
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: git-latest
Platform: unspecified Linux
: NOR normal
Target Milestone: 0.4.0
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-03-20 15:49 UTC by David Edmundson
Modified: 2012-07-06 12:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2012-03-20 15:49:21 UTC
We need to monitor the line editor and set our chat state to paused if the user has text but hasn't typed in a while.

Suggest stealing code/logic from PSI.
Comment 1 Rohan Garg 2012-03-21 14:34:17 UTC
Git commit ceca8bc2dc4c56b382749a5a42fbdf060fbfcd1a by Rohan Garg.
Committed on 21/03/2012 at 15:33.
Pushed by garg into branch 'master'.

Set ChannelChatState as Paused when the user has not typed for the past 5 seconds

REVIEW: 104354

M  +14   -3    lib/chat-widget.cpp
M  +1    -0    lib/chat-widget.h

http://commits.kde.org/telepathy-text-ui/ceca8bc2dc4c56b382749a5a42fbdf060fbfcd1a