Set ChannelChatState as Paused when the user has not typed for the past 5 seconds

REVIEW: 104354
BUG: 296439